Fix protocol icon sizing/spacing for compound pools (#175)

--- a/packages/tempus-client/src/components/dashboard/bodySection/protocolCell.scss
+++ b/packages/tempus-client/src/components/dashboard/bodySection/protocolCell.scss
@@ -6,6 +6,10 @@
   display: flex;
   align-items: center;
 
+  svg {
+    flex-shrink: 0;
+  }
+
   span {
     padding-left: 10px;
   }
